minor optimization and hyperparameter tuning for the model

--- a/notebooks/charmore_p1.ipynb
+++ b/notebooks/charmore_p1.ipynb
@@ -20,7 +20,7 @@
     "### Prepare Dataset\n",
     "import os\n",
     "\n",
-    "data_path = 'data/'\n",
+    "data_path = '../data/'\n",
     "file_paths = os.listdir(data_path)\n",
     "\n",
     "# List of words\n",
@@ -98,7 +98,7 @@
     }
    ],
    "source": [
-    "### Simple encoders and decoders\n",
+    "### encoders and decoders\n",
     "chars = sorted(list(set(''.join(S))))\n",
     "stoi = { s: i + 1 for i, s in enumerate(chars) }\n",
     "stoi['.'] = 0\n",
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Create tensor to represent bigrams in a matrix\n",
+    "### Create tensor to represent bigrams as a matrix\n",
     "import torch\n",
     "\n",
     "N = torch.zeros((48, 48), dtype=torch.int32)\n",
@@ -295,7 +295,7 @@
     "### Testing the neural net\n",
     "\n",
     "# This seed needs to be changed\n",
-    "# if different result is expected\n",
+    "# if you expect different result\n",
     "seed = 40\n",
     "G = torch.Generator().manual_seed(seed)\n",
     "\n",
