batch normalization and minor features

--- a/notebooks/charmore_p4.ipynb
+++ b/notebooks/charmore_p4.ipynb
@@ -3,12 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecc4ef9b-e644-497e-887b-ffe40fa90c5a",
+   "id": "c52482ab-6ab2-4334-912d-77d49126272d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "import os\n",
+    "from tqdm import trange, tqdm\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c09026b-9f8e-4dc5-95d9-6ab2fde954fa",
+   "id": "7b5be765-46c1-4352-876e-937804c48060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b196e87-8ff0-4d92-8d7a-879bd77615e7",
+   "id": "72a025da-4684-41ba-bc23-e438ad2a1248",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a75826f-23df-43c3-bfca-2ac7e521431f",
+   "id": "ceb28790-0e3b-465c-bdec-d4e3d2c9fa28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,13 +56,14 @@
     "stoi = { s: i + 1 for i, s in enumerate(chars) }\n",
     "stoi['.'] = 0\n",
     "itos = { i: s for s, i in stoi.items() }\n",
+    "vocab_size = len(stoi) # this is vocabulary size\n",
     "len(itos), len(stoi)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "725f8149-babc-427c-b9a2-2b38f9870728",
+   "id": "50819887-2348-48d0-acc3-402b2ec1e3c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,26 +76,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ad20f17-9a42-43fc-a93e-62f43542a01d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# These are hyper parameters I extracted from the lecture part\n",
-    "nneurons = 500 # number of neurons in hidden layer\n",
-    "vocab_size = len(stoi) # this is vocabulary size\n",
-    "block_size = 3 # this is how much will there be in each context\n",
-    "emb_size = 10 # this is how we will embed contexts\n",
-    "batch_size = 128 # for minibatch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3dd65603-80cf-4aa4-86df-19816c4706b5",
+   "id": "deff696b-9c0c-4a07-8359-676307b1a806",
    "metadata": {},
    "outputs": [],
    "source": [
     "### build dataset\n",
+    "block_size = 3 # this is how much will there be in each context\n",
+    "\n",
     "def build_dataset(words):\n",
     "    X, Y = [], []\n",
     "    for word in words:\n",
@@ -130,24 +119,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a91a6a3a-dda4-4842-8055-e0b77ab0edfe",
+   "id": "95432e27-94a2-4006-bdc9-89920afd1b40",
    "metadata": {},
    "outputs": [],
    "source": [
     "### neural network layers\n",
+    "nneurons = 300 # number of neurons in hidden layer\n",
+    "emb_size = 10 # this is how we will embed contexts\n",
+    "\n",
     "g = torch.Generator().manual_seed(42069)\n",
     "# this is lookup table\n",
-    "C = torch.randn((vocab_size, emb_size), generator=g)\n",
-    "W1 = torch.randn((block_size * emb_size, nneurons), generator=g)\n",
-    "b1 = torch.randn(nneurons, generator=g)\n",
-    "# this is output layer\n",
-    "W2 = torch.randn((nneurons, vocab_size), generator=g)\n",
-    "b2 = torch.randn(vocab_size, generator=g)\n",
-    "params = [C, W1, b1, W2, b2]\n",
+    "C = torch.randn((vocab_size, emb_size),             generator=g)\n",
+    "W1 = torch.randn((block_size * emb_size, nneurons), generator=g) * (5/3) / (block_size * emb_size)**0.5\n",
+    "# b1 = torch.randn(nneurons,                          generator=g) * 0.01\n",
+    "W2 = torch.randn((nneurons, vocab_size),            generator=g) * 0.01\n",
+    "b2 = torch.randn(vocab_size,                        generator=g) * 0.0\n",
+    "\n",
+    "# batch normalization parameters\n",
+    "bngain = torch.ones((1, nneurons))\n",
+    "bnbias = torch.zeros((1, nneurons))\n",
+    "bnmean_running = torch.zeros((1, nneurons))\n",
+    "bnstd_running = torch.ones((1, nneurons))\n",
+    "\n",
+    "params = [C, W1, W2, b2, bngain, bnbias,] # b1,]\n",
     "for p in params:\n",
     "    p.requires_grad = True\n",
-    "\n",
     "nparams = sum(p.nelement() for p in params)\n",
+    "\n",
     "print(f'---- neural network ----')\n",
     "print(f'number of parameters: {nparams}')"
    ]
@@ -155,144 +153,105 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e28cb612-9baa-4cde-8bf1-e01018bd2afa",
+   "id": "3615cae1-9f70-4cc7-ac15-e8de5f73f4e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### for tracking stats and tweaking learning rate\n",
-    "lre = torch.linspace(-3, 0, 100_000) # the last 10_000 should match number of epochs\n",
-    "lrs = 10 ** lre\n",
-    "lri = []\n",
+    "batch_size = 32 # for minibatch\n",
+    "max_steps = 20_00\n",
     "lossi = []\n",
-    "stepi = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff64613c-c9a1-427d-9c76-9aa0e2963eac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### training phase\n",
-    "for i in range(100_000):\n",
-    "    # minibatch\n",
-    "    ix = torch.randint(0, X_train.shape[0], (batch_size, ), generator=g)\n",
-    "    \n",
-    "    # forward pass\n",
-    "    emb = C[X_train[ix]] # (batch_size, block_size, emb_size)\n",
-    "    h = torch.tanh(emb.view(-1, block_size * emb_size) @ W1 + b1) # (batch_size, nneurons)\n",
-    "    logits = h @ W2 + b2 # (batch_size, vocab_size)\n",
-    "    loss = F.cross_entropy(logits, y_train[ix])\n",
     "\n",
-    "    if i % 10_000 == 0:\n",
-    "        print(f'ეპოქა: {i}, დანაკარგი: {loss}')\n",
-    "    \n",
-    "    # backward pass\n",
+    "# for i in tqdm(range(max_steps + 1), desc=\"training\", unit_scale=True):\n",
+    "for i in range(1, max_steps + 1):\n",
+    "\n",
+    "    # minibatch construct\n",
+    "    ix = torch.randint(0, X_train.shape[0], (batch_size, ), generator=g)\n",
+    "    X_batch, y_batch = X_train[ix], y_train[ix]\n",
+    "\n",
+    "    # forward pass\n",
+    "    # flatten embedded block\n",
+    "    emb = C[X_batch]\n",
+    "    embcat = emb.view(emb.shape[0], -1)\n",
+    "    # ---------- Linear Layer -------------- \n",
+    "    # this is hidden layer, pre-activations\n",
+    "    hpreact = embcat @ W1 # + b1\n",
+    "    # ----------- BatchNorm ----------------\n",
+    "    # when using bias in batch normalization layer effect won't be noticable\n",
+    "    # after normalizing the batch, so we remove bias\n",
+    "    # batch normalization is itself a bias\n",
+    "    bnmeani = hpreact.mean(0, keepdim=True)\n",
+    "    bnstdi = hpreact.std(0, keepdim=True)\n",
+    "    hpreact = bngain * (hpreact - bnmeani) / bnstdi + bnbias\n",
+    "    with torch.no_grad():\n",
+    "        bnmean_running = 0.999 * bnmean_running + 0.001 * bnmeani\n",
+    "        bnstd_running = 0.999 * bnstd_running + 0.001 * bnstdi\n",
+    "    # ----------- Non-Linear Layer --------\n",
+    "    h = torch.tanh(hpreact)\n",
+    "    logits = h @ W2 + b2\n",
+    "    loss = F.cross_entropy(logits, y_batch)\n",
+    "\n",
+    "    # --------- Backpropagation -----------\n",
     "    for p in params:\n",
     "        p.grad = None\n",
     "    loss.backward()\n",
     "\n",
-    "    # update parameters\n",
-    "    # lr = lrs[i]\n",
-    "    # stats have shown that learning rate at 0.5\n",
-    "    lr = 10 ** (-1.0)\n",
+    "    # udpate\n",
+    "    lr = 0.1 if i < 100_000 else 0.01 # this is laerning rate decay\n",
     "    for p in params:\n",
     "        p.data += -lr * p.grad\n",
     "\n",
-    "    # tracking stats\n",
-    "    # lri.append(lre[i])\n",
-    "    stepi.append(i)\n",
-    "    lossi.append(loss.log10().item())\n",
-    "print(loss.item())"
+    "    # track stats\n",
+    "    if i % 10_000 == 0:\n",
+    "        print(f'{i:6d}/{max_steps:6d}: {loss.item():.4f}')\n",
+    "    lossi.append(loss.item())   \n",
+    "\n",
+    "    # break\n",
+    "loss.item()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fead98b-e6cc-47d7-a497-19274aa40752",
+   "id": "d504dd2a-3a99-4f81-be97-c03f0091feb2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(stepi, lossi)"
+    "@torch.no_grad()\n",
+    "def split_loss(split):\n",
+    "    x, y = {\n",
+    "        'train': (X_train, y_train),\n",
+    "        'val': (X_dev, y_dev),\n",
+    "        'test': (X_test, y_test),\n",
+    "    }[split]\n",
+    "    emb = C[x]\n",
+    "    embcat = emb.view(emb.shape[0], -1)\n",
+    "    hpreact = embcat @ W1 + b1\n",
+    "    hpreact = bngain * (hpreact - bnmean) / bnstd + bnbias\n",
+    "    h = torch.tanh(hpreact)\n",
+    "    logits = h @ W2 + b2\n",
+    "    loss = F.cross_entropy(logits, y)\n",
+    "    print(split, loss.item())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4af43a90-b800-4135-8a78-81018dad8cfe",
+   "id": "d6ab884f-8d90-474c-a5c9-f8c919a8af9e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# training loss\n",
-    "emb = C[X_train]\n",
-    "h = torch.tanh(emb.view(-1, block_size * emb_size) @ W1 + b1)\n",
-    "logits = h @ W2 + b2\n",
-    "loss = F.cross_entropy(logits, y_train)\n",
-    "loss"
+    "split_loss('val')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f0e57ee-162a-4fd1-8dbb-36df7a544805",
+   "id": "6cdc2842-6473-4d21-ab5c-6da44b4a4f45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# validation loss\n",
-    "emb = C[X_dev]\n",
-    "h = torch.tanh(emb.view(-1, block_size * emb_size) @ W1 + b1)\n",
-    "logits = h @ W2 + b2\n",
-    "loss = F.cross_entropy(logits, y_dev)\n",
-    "loss"
+    "split_loss('test')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7dda4069-06ff-40e4-8005-6ed86da34176",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# testing loss\n",
-    "emb = C[X_test]\n",
-    "h = torch.tanh(emb.view(-1, block_size * emb_size) @ W1 + b1)\n",
-    "logits = h @ W2 + b2\n",
-    "loss = F.cross_entropy(logits, y_test)\n",
-    "loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c34d080-9b9f-4e00-a546-6c3aedb4ec4a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### sample from the model\n",
-    "for _ in range(100):\n",
-    "    word = []\n",
-    "    context = [0] * block_size\n",
-    "    while True:\n",
-    "        emb = C[torch.tensor([context])]\n",
-    "        h = torch.tanh(emb.view(1, -1) @ W1 + b1)\n",
-    "        logits = h @ W2 + b2\n",
-    "        probs = F.softmax(logits, dim=1)\n",
-    "        ix = torch.multinomial(probs, num_samples=1, generator=g).item()\n",
-    "        context = context[1:] + [ix]\n",
-    "        word.append(ix)\n",
-    "        if ix == 0:\n",
-    "            break\n",
-    "    print('generated word:', ''.join(itos[i] for i in word if i != 0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b3a4301-1904-48ad-b0ea-b8554ae246d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
