fixed runtime errors in old notebooks and added sampled data in each of them

--- a/notebooks/charmore_p1.ipynb
+++ b/notebooks/charmore_p1.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "feb31944-f9a1-4db2-9981-fac584632729",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total words: 27466\n",
+      "minimum length: 2\n",
+      "maximum length: 16\n"
+     ]
+    }
+   ],
    "source": [
     "### Prepare Dataset\n",
-    "import os\n",
-    "\n",
-    "data_path = '../data/'\n",
-    "file_paths = os.listdir(data_path)\n",
+    "data_path = \"../data/\"\n",
+    "file_paths = !ls ../data/\n",
     "\n",
     "# List of words\n",
     "S = []\n",
@@ -33,11 +41,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c9ae1c2-3d0b-45a5-9ab7-99f755807bc5",
+   "cell_type": "markdown",
+   "id": "33381918-2911-4392-a296-cd98a6897ca4",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Bigrams\n",
     "B = {}\n",
@@ -52,10 +58,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "df2f8016-b4d7-44fe-9904-444835a31a2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### encoders and decoders\n",
     "chars = sorted(list(set(''.join(S))))\n",
@@ -67,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a147f12b-6299-468d-94a8-cba3fea2249a",
    "metadata": {},
    "outputs": [],
@@ -87,17 +104,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "881294d1-cdaf-4998-90e2-727c443b196d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[   0, 3004, 1144,  854,  905, 1440,  751,  866, 1289,  729, 1292, 1298,\n",
+       "         1178, 2632, 1259,  317,  745,   59, 1378, 2806, 1212,  201,  766,  361,\n",
+       "           62,  339,  454,   15,    0,    4,   25,    1,    1,    0,    4,    0,\n",
+       "            0,    3,    0,    0,    6,    0,   28,    9,    0,   11,    0,   18],\n",
+       "        [7377,  489,  685,  191,  917,  221,  265,  295,  742,  916,  356,  474,\n",
+       "         1685, 1357, 4350,   84,  144,   51, 3579, 1222, 1068,  290,  323,  222,\n",
+       "           53,  459,  355,    0,    0,    0,    0,    0,    0,    0,    5,    0,\n",
+       "            5,    0,    1,    4,    0,    0,    0,    0,    1,    0,    0,    0]],\n",
+       "       dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "N[:2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "54fcd1d7-88da-433f-bb77-43909683b791",
    "metadata": {},
    "outputs": [],
@@ -118,10 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "05e4dcbe-c9b7-48d8-afb2-705f0d11f444",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inputs: 199688\n",
+      "targets: 199688\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'inputs: {n_samples}')\n",
     "print(f'targets: {len(Y)}')"
@@ -129,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8ba4db1f-c5d4-4bea-a365-6cad536a1011",
    "metadata": {},
    "outputs": [],
@@ -144,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f3355f72-7ec1-4935-999b-b02f0f1fc05c",
    "metadata": {},
    "outputs": [],
@@ -157,10 +202,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "bf6f470a-dbcc-465a-a60b-d895b706b394",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 10, loss: 3.1465213298797607\n",
+      "epoch: 20, loss: 2.923682689666748\n",
+      "epoch: 30, loss: 2.841978073120117\n",
+      "epoch: 40, loss: 2.8001396656036377\n",
+      "epoch: 50, loss: 2.775259256362915\n",
+      "epoch: 60, loss: 2.7589099407196045\n",
+      "epoch: 70, loss: 2.7473530769348145\n",
+      "epoch: 80, loss: 2.7387678623199463\n",
+      "epoch: 90, loss: 2.7321460247039795\n",
+      "epoch: 100, loss: 2.726881265640259\n"
+     ]
+    }
+   ],
    "source": [
     "for e in range(1, 100 + 1):\n",
     "    # forward pass\n",
@@ -184,10 +246,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "848a03ca-4dd8-40cd-8e0c-18a323c52710",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generated word: adeva.\n",
+      "generated word: la.\n",
+      "generated word: terananarif.\n",
+      "generated word: arerilard.\n",
+      "generated word: klúez.\n",
+      "generated word: ra.\n",
+      "generated word: uvinnn.\n",
+      "generated word: shieelieyardysa.\n",
+      "generated word: if.\n",
+      "generated word: maria.\n"
+     ]
+    }
+   ],
    "source": [
     "### Testing the neural net\n",
     "\n",
@@ -212,14 +291,6 @@
     "    word = ''.join(word)\n",
     "    print(f'generated word: {word}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39c17321-811b-4475-8fc2-5c87c959f941",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
