--- a/notebooks/charmore_p4.ipynb
+++ b/notebooks/charmore_p4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c52482ab-6ab2-4334-912d-77d49126272d",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7b5be765-46c1-4352-876e-937804c48060",
    "metadata": {},
    "outputs": [],
@@ -34,10 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "72a025da-4684-41ba-bc23-e438ad2a1248",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total words: 314532\n"
+     ]
+    }
+   ],
    "source": [
     "### initializing dataset\n",
     "S = read_words('../geowords.txt')\n",
@@ -46,10 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ceb28790-0e3b-465c-bdec-d4e3d2c9fa28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(34, 34)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### set vocabulary mappings\n",
     "chars = sorted(list(set(''.join(S))))\n",
@@ -62,10 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "50819887-2348-48d0-acc3-402b2ec1e3c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "314532"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# randomize dataset\n",
     "random.seed(42069)\n",
@@ -75,10 +105,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "deff696b-9c0c-4a07-8359-676307b1a806",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---- training set ----\n",
+      "input shape: torch.Size([2555905, 3])\n",
+      "label shape: torch.Size([2555905])\n",
+      "total samples: 2555905\n",
+      "---- validation set ----\n",
+      "input shape: torch.Size([319178, 3])\n",
+      "label shape: torch.Size([319178])\n",
+      "total samples: 319178\n",
+      "---- testing set ----\n",
+      "input shape: torch.Size([320136, 3])\n",
+      "label shape: torch.Size([320136])\n",
+      "total samples: 320136\n"
+     ]
+    }
+   ],
    "source": [
     "### build dataset\n",
     "block_size = 3 # this is how much will there be in each context\n",
@@ -118,10 +167,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "95432e27-94a2-4006-bdc9-89920afd1b40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---- neural network ----\n",
+      "number of parameters: 20174\n"
+     ]
+    }
+   ],
    "source": [
     "### neural network layers\n",
     "nneurons = 300 # number of neurons in hidden layer\n",
@@ -152,13 +210,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "3615cae1-9f70-4cc7-ac15-e8de5f73f4e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 17323/200000: 2.7090\n",
+      " 34646/200000: 2.6447\n",
+      " 51969/200000: 2.8430\n",
+      " 69292/200000: 2.3006\n",
+      " 86615/200000: 2.5513\n",
+      "103938/200000: 2.0873\n",
+      "121261/200000: 2.1773\n",
+      "138584/200000: 2.0769\n",
+      "155907/200000: 2.2842\n",
+      "173230/200000: 2.5677\n",
+      "190553/200000: 2.2459\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.5770657062530518"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "batch_size = 32 # for minibatch\n",
-    "max_steps = 20_00\n",
+    "max_steps = 200_000\n",
     "lossi = []\n",
     "\n",
     "# for i in tqdm(range(max_steps + 1), desc=\"training\", unit_scale=True):\n",
@@ -195,13 +281,13 @@
     "        p.grad = None\n",
     "    loss.backward()\n",
     "\n",
-    "    # udpate\n",
+    "    # update\n",
     "    lr = 0.1 if i < 100_000 else 0.01 # this is laerning rate decay\n",
     "    for p in params:\n",
     "        p.data += -lr * p.grad\n",
     "\n",
     "    # track stats\n",
-    "    if i % 10_000 == 0:\n",
+    "    if i % 17_323 == 0:\n",
     "        print(f'{i:6d}/{max_steps:6d}: {loss.item():.4f}')\n",
     "    lossi.append(loss.item())   \n",
     "\n",
@@ -211,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "d504dd2a-3a99-4f81-be97-c03f0091feb2",
    "metadata": {},
    "outputs": [],
@@ -225,8 +311,8 @@
     "    }[split]\n",
     "    emb = C[x]\n",
     "    embcat = emb.view(emb.shape[0], -1)\n",
-    "    hpreact = embcat @ W1 + b1\n",
-    "    hpreact = bngain * (hpreact - bnmean) / bnstd + bnbias\n",
+    "    hpreact = embcat @ W1 # + b1\n",
+    "    hpreact = bngain * (hpreact - bnmean_running) / bnstd_running + bnbias\n",
     "    h = torch.tanh(hpreact)\n",
     "    logits = h @ W2 + b2\n",
     "    loss = F.cross_entropy(logits, y)\n",
@@ -235,23 +321,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6ab884f-8d90-474c-a5c9-f8c919a8af9e",
+   "execution_count": 60,
+   "id": "8c7f9c53-b1f2-4676-abb4-6bab0ce1201e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val 2.215928077697754\n"
+     ]
+    }
+   ],
    "source": [
     "split_loss('val')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6cdc2842-6473-4d21-ab5c-6da44b4a4f45",
+   "execution_count": 61,
+   "id": "9cd7cb95-2e9e-4072-8218-c1df8030b82f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test 2.208803176879883\n"
+     ]
+    }
+   ],
    "source": [
     "split_loss('test')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "ddb12775-f990-4c0f-b514-e198c92d62d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generated word: ამოორხარხანდიშმიგვაგხანდაცმოლხი\n",
+      "generated word: გაუტევიათრია\n",
+      "generated word: ბინევრობელი\n",
+      "generated word: გეშვილი\n",
+      "generated word: სიწია\n",
+      "generated word: გადავდისეულოს\n",
+      "generated word: გამოეშვილი\n",
+      "generated word: ჩდე\n",
+      "generated word: შეხდებინარანი\n",
+      "generated word: აფრინიზმებური\n",
+      "generated word: არგზე\n",
+      "generated word: კოერული\n",
+      "generated word: მოსა\n",
+      "generated word: ზაჭივით\n",
+      "generated word: გასახვევიცნილიზევინთ\n",
+      "generated word: სუფლებებზე\n",
+      "generated word: გაკაცი\n",
+      "generated word: გელისოთხოვნოთ\n",
+      "generated word: დაისტრა\n",
+      "generated word: ვერის\n"
+     ]
+    }
+   ],
+   "source": [
+    "### sample from the model\n",
+    "for _ in range(20):\n",
+    "    word = []\n",
+    "    context = [0] * block_size\n",
+    "    while True:\n",
+    "        emb = C[torch.tensor(context)]\n",
+    "        embcat = emb.view(1, -1)\n",
+    "        hpreact = embcat @ W1 # + b1\n",
+    "        hpreact = bngain * (hpreact - bnmean_running) / bnstd_running + bnbias\n",
+    "        h = torch.tanh(hpreact)\n",
+    "        logits = h @ W2 + b2\n",
+    "        probs = F.softmax(logits, dim=1)\n",
+    "        ix = torch.multinomial(probs, num_samples=1).item()\n",
+    "        context = context[1:] + [ix]\n",
+    "        word.append(ix)\n",
+    "        if ix == 0:\n",
+    "            break\n",
+    "    print('generated word:', ''.join(itos[i] for i in word if i != 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64d75c6b-7f76-4a09-905a-b8d09ebe6bda",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
