done exercise 1 - manual backpropagation

--- a/notebooks/charmore_p5.ipynb
+++ b/notebooks/charmore_p5.ipynb
@@ -166,7 +166,10 @@
     "    \n",
     "class Linear(Module):\n",
     "    def __init__(self, fan_in, fan_out, bias=True):\n",
-    "        # `fan_in` won't be necessary if using batch normalization\n",
+    "        # batch normalization does not require xavier initialization: fan_in**0.5\n",
+    "        # this initialization works for non-linearities, such as tanh. but won't\n",
+    "        # work for relu or such. if using relu, or other linearities the case\n",
+    "        # of '(fan_in/2)**0.5' will converge and works fine.\n",
     "        self.weights = torch.randn((fan_in, fan_out), generator=g) / fan_in**0.5\n",
     "        self.bias = torch.zeros(fan_out) if bias else None\n",
     "    def forward(self, x):\n",
@@ -181,7 +184,7 @@
     "        self.eps = eps\n",
     "        self.momentum = momentum\n",
     "        self.training = True\n",
-    "        # this are the parameters to adjust, tweak\n",
+    "        # these are the parameters to adjust, tweak\n",
     "        # and shift normalized data. gamma is a\n",
     "        # scalar value and beta is a shifter.\n",
     "        self.gamma = torch.ones(dim)\n",
